--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
                 <fieldset>
                     <legend class="main__subtitle">Какие типы input корректны?</legend>
                     <label class="answer">
-                        <input type="checkbox" name="answer" class="answer__chekbox">text
+                        <input type="checkbox" name="answer" class="answer__checkbox">text
                     </label>
 
                     <label class="answer">
-                        <input type="checkbox" name="answer" class="answer__chekbox">color
+                        <input type="checkbox" name="answer" class="answer__checkbox">color
                     </label>
 
                     <label class="answer">
-                        <input type="checkbox" name="answer" class="answer__chekbox">week
+                        <input type="checkbox" name="answer" class="answer__checkbox">week
                     </label>
 
                     <label class="answer">
-                        <input type="checkbox" name="answer" class="answer__chekbox">day
+                        <input type="checkbox" name="answer" class="answer__checkbox">day
                     </label>
                 </fieldset>
 
