--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="header__title">Quiz Time</h1>
         </div>
     </header>
-    <main>
+    <main class="main">
         <h2 class="main__title">Выберите Quiz</h2>
         <div class="main__box selection">
             <ul class="selection__list">
@@ -55,9 +55,9 @@
                 </li>
             </ul>
         </div>
-
-        <div class="main__box main__box-question">
-            <form class="main__form-question" data-count="1/10">
+<!--
+        <div class="main__box main__box_question">
+            <form class="main__form_question" data-count="1/10">
                 <fieldset>
                     <legend class="main__subtitle">Какие типы input корректны?</legend>
                     <label class="answer">
@@ -81,8 +81,8 @@
             </form>
         </div>
 
-        <div class="main__box main__box-question">
-            <form class="main__form-question" data-count="2/10">
+        <div class="main__box main__box_question">
+            <form class="main__form_question" data-count="2/10">
                 <fieldset>
                     <legend class="main__subtitle">Какая столица является родиной демократии?</legend>
                     <label class="answer">
@@ -114,6 +114,7 @@
             </div>
             <button type="button" title="К списку квизов" class="main__btn result__return">К списку квизов</button>
         </div>
+    -->
     </main>
 </body>
 </html>
