--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2 class="main__title">Выберите Quiz</h2>
         <div class="main__box selection">
             <ul class="selection__list">
-                <li class="selection__item">
+                <!-- <li class="selection__item">
                     <button class="selection__theme">Финансовая грамотность</button>
                 </li>
 
@@ -52,7 +52,7 @@
                 
                 <li class="selection__item">
                     <button class="selection__theme">Свободная тема</button>
-                </li>
+                </li> -->
             </ul>
         </div>
 <!--
